--- a/NLP/NLP for Word file/7. filter for public access.ipynb
+++ b/NLP/NLP for Word file/7. filter for public access.ipynb
@@ -1776,97 +1776,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_pickle.to_parquet(r\"C:\\Users\\johan\\Documents\\GitHub\\johannes.vc\\website\\static\\df_topic_parquet\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Topic</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Top_n_words</th>\n",
-       "      <th>2d_embeddings_x</th>\n",
-       "      <th>2d_embeddings_y</th>\n",
-       "      <th>texts</th>\n",
-       "      <th>mask</th>\n",
-       "      <th>embeddings</th>\n",
-       "      <th>topic_names</th>\n",
-       "      <th>similarity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>14</td>\n",
-       "      <td>14_taal_spreken_discours_woorden</td>\n",
-       "      <td>taal - spreken - discours - woorden - zeker - ...</td>\n",
-       "      <td>2.815553</td>\n",
-       "      <td>2.021039</td>\n",
-       "      <td>Wat ik hier wil doen is, net als in mijn dagbo...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>[-0.007182960398495197, -0.01577874645590782, ...</td>\n",
-       "      <td>taal, spreken, discours, woorden, vertaalbaarh...</td>\n",
-       "      <td>0.679611</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Topic                              Name  \\\n",
-       "0     14  14_taal_spreken_discours_woorden   \n",
-       "\n",
-       "                                         Top_n_words  2d_embeddings_x  \\\n",
-       "0  taal - spreken - discours - woorden - zeker - ...         2.815553   \n",
-       "\n",
-       "   2d_embeddings_y                                              texts  mask  \\\n",
-       "0         2.021039  Wat ik hier wil doen is, net als in mijn dagbo...  True   \n",
-       "\n",
-       "                                          embeddings  \\\n",
-       "0  [-0.007182960398495197, -0.01577874645590782, ...   \n",
-       "\n",
-       "                                         topic_names  similarity  \n",
-       "0  taal, spreken, discours, woorden, vertaalbaarh...    0.679611  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_parquet(r\"C:\\Users\\johan\\Documents\\GitHub\\johannes.vc\\website\\static\\df_topic_parquet\").head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
@@ -1888,7 +1797,7 @@
    "outputs": [],
    "source": [
     "embeddings = df_pickle.embeddings.tolist()\n",
-    "user_text_embedding = generate_embedding(\"hot girls making you want them\")\n",
+    "user_text_embedding = generate_embedding(\"excess\")\n",
     "cosine_similarities = cosine_similarity(np.array([user_text_embedding]), embeddings)\n",
     "df_pickle['similarity'] = cosine_similarities.flatten()\n",
     "df_sim = df_pickle.sort_values(by='similarity', ascending=False)"
@@ -1977,7 +1886,7 @@
     }
    ],
    "source": [
-    "df_pickle['texts'][df_pickle['texts'].str.contains('porn')]"
+    "df_pickle['texts'][df_pickle['texts'].str.contains('moral')]"
    ]
   },
   {
@@ -1987,14 +1896,8 @@
    "outputs": [],
    "source": [
     "persons2 = [ \n",
-    "            # 'de Colruyts',\n",
-    "            # 'Jef Colruyt', 'Jef',\n",
-    "            # 'Korys', 'Cozin', 'Colruyt Group', 'cozin', 'Colruyt', 'colruyt', 'korys',\n",
-    "            # 'cozin', \n",
-    "            # 'coteam', 'Coteam',\n",
     "            # 'jef', 'rosy','Xsara'\n",
     "            # 'Thomas', 'Tomas'\n",
-    "            'Porno'\n",
     "            ]\n",
     "\n",
     "def re_person_filter(text):\n",
@@ -2031,26 +1934,6 @@
    ],
    "source": [
     "df_pickle['texts'][df_pickle['texts'].str.contains('Tomas')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "92"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fuzz.ratio('colruyt', 'colrut')"
    ]
   },
   {
@@ -2098,16 +1981,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://johannes.vc/auth/login_with_token?language=en&token=8357c457-d3d2-44d8-b35a-22056f08721b'"
+       "'https://johannes.vc/auth/login_with_token?language=en&token=7484c338-1bad-4a2a-be3b-1793a8353716'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2158,6 +2041,97 @@
     "    expiry = user.to_dict()['timestamp'] + timedelta(days=7)\n",
     "    if datetime.now(timezone.utc) < expiry:\n",
     "        print(expiry - datetime.now(timezone.utc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pickle.to_parquet(r\"C:\\Users\\johan\\Documents\\GitHub\\johannes.vc\\website\\static\\df_topic_parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Top_n_words</th>\n",
+       "      <th>2d_embeddings_x</th>\n",
+       "      <th>2d_embeddings_y</th>\n",
+       "      <th>texts</th>\n",
+       "      <th>mask</th>\n",
+       "      <th>embeddings</th>\n",
+       "      <th>topic_names</th>\n",
+       "      <th>similarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14</td>\n",
+       "      <td>14_taal_spreken_discours_woorden</td>\n",
+       "      <td>taal - spreken - discours - woorden - zeker - ...</td>\n",
+       "      <td>2.815553</td>\n",
+       "      <td>2.021039</td>\n",
+       "      <td>Wat ik hier wil doen is, net als in mijn dagbo...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>[-0.007182960398495197, -0.01577874645590782, ...</td>\n",
+       "      <td>taal, spreken, discours, woorden, vertaalbaarh...</td>\n",
+       "      <td>0.679611</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Topic                              Name  \\\n",
+       "0     14  14_taal_spreken_discours_woorden   \n",
+       "\n",
+       "                                         Top_n_words  2d_embeddings_x  \\\n",
+       "0  taal - spreken - discours - woorden - zeker - ...         2.815553   \n",
+       "\n",
+       "   2d_embeddings_y                                              texts  mask  \\\n",
+       "0         2.021039  Wat ik hier wil doen is, net als in mijn dagbo...  True   \n",
+       "\n",
+       "                                          embeddings  \\\n",
+       "0  [-0.007182960398495197, -0.01577874645590782, ...   \n",
+       "\n",
+       "                                         topic_names  similarity  \n",
+       "0  taal, spreken, discours, woorden, vertaalbaarh...    0.679611  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_parquet(r\"C:\\Users\\johan\\Documents\\GitHub\\johannes.vc\\website\\static\\df_topic_parquet\").head(1)"
    ]
   }
  ],
