--- a/NLP/NLP for Word file/7. filter for public access.ipynb
+++ b/NLP/NLP for Word file/7. filter for public access.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pickle = pd.read_pickle(\"df_topic_model_all\")"
+    "df_pickle = pd.read_parquet(r\"C:\\Users\\johan\\Documents\\GitHub\\johannes.vc\\website\\static\\df_topic_parquet\")"
    ]
   },
   {
