--- a/NLP/NLP for Word file/8. Function calling for semantic search.ipynb
+++ b/NLP/NLP for Word file/8. Function calling for semantic search.ipynb
@@ -249,11 +249,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_TOKEN = r'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'"
+    "import os\n",
+    "API_TOKEN = os.getenv('HUGGINGFACE')"
    ]
   },
   {
