--- a/SQL/BigQuery SQL.ipynb
+++ b/SQL/BigQuery SQL.ipynb
@@ -285,6 +285,22 @@
                 "bikes: DataFrame = bikes\n",
                 "bikes.plot(kind='barh', x='name', y='bikes_count')"
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {
+                "vscode": {
+                    "languageId": "sql"
+                }
+            },
+            "outputs": [],
+            "source": [
+                "SELECT table_name, column_name, data_type\n",
+                "FROM `johannesvc.johannesvc.INFORMATION_SCHEMA.COLUMNS`\n",
+                "WHERE table_name = 'Olympics_dataset'  \n",
+                "-- ORDER BY table_name, column_name"
+            ]
         }
     ],
     "metadata": {
