--- a/data analytics projects (SQL)/NoSQL - Basic Google FireStore.ipynb
+++ b/data analytics projects (SQL)/NoSQL - Basic Google FireStore.ipynb
@@ -43,8 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = 'C:/Users/johan/Documents/GitHub/johannes.vc/google_credentials.json'\n",
-    "os.environ[\"GOOGLE_CLOUD_PROJECT\"] = 'johannesvc'"
+    "# os.environ[\"GOOGLE_CLOUD_PROJECT\"] = 'johannesvc'"
    ]
   },
   {
@@ -77,7 +76,7 @@
    "source": [
     "from firebase_admin import credentials\n",
     "\n",
-    "cred = credentials.Certificate('C:/Users/johan/Documents/GitHub/johannes.vc/google_credentials.json')\n",
+    "cred = credentials.Certificate(os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"])\n",
     "\n",
     "# and then the same\n",
     "app = firebase_admin.initialize_app(cred)\n",
