--- a/data analytics statistics (SQL)/BigQuery lin reg - NYC taxi.ipynb
+++ b/data analytics statistics (SQL)/BigQuery lin reg - NYC taxi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## cloudskillsboost lab on forecasting (linear regression) in bigquery"
+    "## Forecasting (linear regression) in bigquery"
    ]
   },
   {
