--- a/data analytics statistics (SQL)/BigQuery log reg - ecommerce.ipynb
+++ b/data analytics statistics (SQL)/BigQuery log reg - ecommerce.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## cloudskillsboost lab on classification model in bigquery\n",
+    "## Excellent classification model in bigquery\n",
     "\n",
     "Interesting because it uses an ecommerce dataset and asks some pertinent questions in the EDA part of the exercise. \n",
     "\n",
-    "It then builds a model in SQL to direct marketing more narrowly at `more likely converters`. This increases ROI within marketing.\n",
+    "It then builds a logistic regression model in SQL to direct marketing more narrowly at `more likely converters`. This increases ROI within marketing.\n",
     "\n",
     "It is also quite easy to export Google Analytics data from any ecommerce website so this approach can be copied."
    ]
