more statistics in bigquery

--- a/data analytics statistics (SQL)/BigQuery log reg - ecommerce.ipynb
+++ b/data analytics statistics (SQL)/BigQuery log reg - ecommerce.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -157,12 +157,32 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Query complete after 0.02s: 100%|██████████| 5/5 [00:00<00:00, 2499.59query/s]                        \n",
-      "Downloading: 100%|██████████| 10/10 [00:01<00:00,  8.40rows/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3635bb577ce4df5aac2edccbfd45844",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Query is running:   0%|          |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "85958af8b2bf4990b2b8d09ce6a3d57b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -186,6 +206,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>bounces</th>\n",
+       "      <th>bounces_1</th>\n",
        "      <th>time_on_site</th>\n",
        "      <th>will_buy_on_return_visit</th>\n",
        "    </tr>\n",
@@ -193,60 +214,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>15047</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>12136</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>11201</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>10046</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>9974</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>9564</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>9520</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>9275</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>9138</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>8872</td>\n",
        "      <td>0</td>\n",
@@ -256,20 +287,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   bounces  time_on_site  will_buy_on_return_visit\n",
-       "0        0         15047                         0\n",
-       "1        0         12136                         0\n",
-       "2        0         11201                         0\n",
-       "3        0         10046                         0\n",
-       "4        0          9974                         0\n",
-       "5        0          9564                         0\n",
-       "6        0          9520                         0\n",
-       "7        0          9275                         1\n",
-       "8        0          9138                         0\n",
-       "9        0          8872                         0"
+       "   bounces  bounces_1  time_on_site  will_buy_on_return_visit\n",
+       "0     <NA>          0         15047                         0\n",
+       "1     <NA>          0         12136                         0\n",
+       "2     <NA>          0         11201                         0\n",
+       "3     <NA>          0         10046                         0\n",
+       "4     <NA>          0          9974                         0\n",
+       "5     <NA>          0          9564                         0\n",
+       "6     <NA>          0          9520                         0\n",
+       "7     <NA>          0          9275                         1\n",
+       "8     <NA>          0          9138                         0\n",
+       "9     <NA>          0          8872                         0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
