--- a/data analytics statistics (SQL)/BigQuery - GA4.ipynb
+++ b/data analytics statistics (SQL)/BigQuery - GA4.ipynb
@@ -291,7 +291,8 @@
     "       device_category,\n",
     "       array_agg(\n",
     "        if(coalesce(traffic_source.source_value, traffic_source.medium,traffic_source.gclid) is not null, traffic_source, null)\n",
-    "        order by event_timestamp asc limit 1)[safe_offset(0)] as session_first_traffic_source\n",
+    "        order by event_timestamp asc limit 1\n",
+    "        )[safe_offset(0)] as session_first_traffic_source\n",
     "from prep\n",
     "group by 1,2,3,4\n",
     ")\n",
