--- a/data analytics statistics (SQL)/A-B testing, cohort analysis and segmentation.ipynb
+++ b/data analytics statistics (SQL)/A-B testing, cohort analysis and segmentation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -134,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f27eea45af2a4c2c882f1728342cff81",
+       "model_id": "ba7127b139c14a928a052d4e0bf4949d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,7 +148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8098ebd4c45340e584dccf4d0875f671",
+       "model_id": "68f9f5b5d76542b3852e85a2015ce035",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,14 +166,14 @@
     "  event_name, \n",
     "  (SELECT value.string_value FROM UNNEST(event_params) WHERE key = 'page_location') AS page_location\n",
     "FROM\n",
-    "  `johannesvc.analytics_413581908.events_20240215`\n",
+    "  `johannesvc.analytics_413581908.events_*`\n",
     "WHERE\n",
     "  event_name = 'page_view'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -214,12 +214,12 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>page_view</td>\n",
-       "      <td>https://johannes.vc/services/</td>\n",
+       "      <td>https://johannes.vc/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>page_view</td>\n",
-       "      <td>https://johannes.vc/writings/</td>\n",
+       "      <td>https://johannes.vc/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -232,25 +232,58 @@
        "      <td>https://johannes.vc/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
        "      <td>page_view</td>\n",
-       "      <td>https://johannes.vc/services/</td>\n",
+       "      <td>https://johannes.vc/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>page_view</td>\n",
+       "      <td>https://johannes.vc/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>page_view</td>\n",
+       "      <td>https://johannes.vc/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>page_view</td>\n",
+       "      <td>https://johannes.vc/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>page_view</td>\n",
+       "      <td>https://johannes.vc/</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>169 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  event_name                  page_location\n",
-       "0  page_view           https://johannes.vc/\n",
-       "1  page_view  https://johannes.vc/services/\n",
-       "2  page_view  https://johannes.vc/writings/\n",
-       "3  page_view           https://johannes.vc/\n",
-       "4  page_view           https://johannes.vc/\n",
-       "5  page_view  https://johannes.vc/services/"
+       "    event_name         page_location\n",
+       "0    page_view  https://johannes.vc/\n",
+       "1    page_view  https://johannes.vc/\n",
+       "2    page_view  https://johannes.vc/\n",
+       "3    page_view  https://johannes.vc/\n",
+       "4    page_view  https://johannes.vc/\n",
+       "..         ...                   ...\n",
+       "164  page_view  https://johannes.vc/\n",
+       "165  page_view  https://johannes.vc/\n",
+       "166  page_view  https://johannes.vc/\n",
+       "167  page_view  https://johannes.vc/\n",
+       "168  page_view  https://johannes.vc/\n",
+       "\n",
+       "[169 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
