--- a/data analytics statistics (SQL)/BigQuery - Google Analytics 4 integration.ipynb
+++ b/data analytics statistics (SQL)/BigQuery - Google Analytics 4 integration.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Tips and tricks for drawing insights from Google Analytics data in BQ\n",
     "\n",
-    "**The GA4's export lacks a session-level table** See [here](https://blog.datatovalue.nl/ga4-bigquery-sql-how-to-build-queries-from-scratch-55869cda290a).\n",
+    "**The GA4's export lacks a session-level table.** See [here](https://blog.datatovalue.nl/ga4-bigquery-sql-how-to-build-queries-from-scratch-55869cda290a).\n",
     "\n",
     "We need the following dimensions:\n",
     "- date: obviously to determine the date of the session\n",
