--- a/data science course/Data science - Scraping.ipynb
+++ b/data science course/Data science - Scraping.ipynb
@@ -251,6 +251,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for string in soup.stripped_strings:\n",
+    "    print(repr(string))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
