--- a/data analytics projects (SQL)/BigQuery to df tips and tricks.ipynb
+++ b/data analytics projects (SQL)/BigQuery to df tips and tricks.ipynb
@@ -11,64 +11,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "vscode": {
-                    "languageId": "sql"
-                }
-            },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Collecting google-cloud-bigquery[pandas]==2.34.1\n",
-                        "  Using cached google_cloud_bigquery-2.34.1-py2.py3-none-any.whl (206 kB)\n",
-                        "Requirement already satisfied: grpcio<2.0dev,>=1.38.1 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (1.59.0)\n",
-                        "Requirement already satisfied: google-api-core[grpc]<3.0.0dev,>=1.29.0 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (2.12.0)\n",
-                        "Requirement already satisfied: proto-plus>=1.10.0 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (1.22.3)\n",
-                        "Requirement already satisfied: google-cloud-core<3.0.0dev,>=1.4.1 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (2.3.3)\n",
-                        "Requirement already satisfied: google-resumable-media<3.0dev,>=0.6.0 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (2.6.0)\n",
-                        "Requirement already satisfied: packaging>=14.3 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (23.0)\n",
-                        "Requirement already satisfied: protobuf>=3.12.0 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (4.24.4)\n",
-                        "Requirement already satisfied: python-dateutil<3.0dev,>=2.7.2 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (2.8.2)\n",
-                        "Requirement already satisfied: requests<3.0.0dev,>=2.18.0 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (2.28.1)\n",
-                        "Requirement already satisfied: pandas>=0.24.2 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (2.0.3)\n",
-                        "Requirement already satisfied: pyarrow<8.0dev,>=3.0.0 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-cloud-bigquery[pandas]==2.34.1) (7.0.0)\n",
-                        "Requirement already satisfied: googleapis-common-protos<2.0.dev0,>=1.56.2 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-api-core[grpc]<3.0.0dev,>=1.29.0->google-cloud-bigquery[pandas]==2.34.1) (1.60.0)\n",
-                        "Requirement already satisfied: google-auth<3.0.dev0,>=2.14.1 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-api-core[grpc]<3.0.0dev,>=1.29.0->google-cloud-bigquery[pandas]==2.34.1) (2.19.0)\n",
-                        "Requirement already satisfied: grpcio-status<2.0.dev0,>=1.33.2 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-api-core[grpc]<3.0.0dev,>=1.29.0->google-cloud-bigquery[pandas]==2.34.1) (1.59.0)\n",
-                        "Requirement already satisfied: google-crc32c<2.0dev,>=1.0 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-resumable-media<3.0dev,>=0.6.0->google-cloud-bigquery[pandas]==2.34.1) (1.5.0)\n",
-                        "Requirement already satisfied: pytz>=2020.1 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from pandas>=0.24.2->google-cloud-bigquery[pandas]==2.34.1) (2022.7)\n",
-                        "Requirement already satisfied: tzdata>=2022.1 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from pandas>=0.24.2->google-cloud-bigquery[pandas]==2.34.1) (2023.3)\n",
-                        "Requirement already satisfied: numpy>=1.21.0 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from pandas>=0.24.2->google-cloud-bigquery[pandas]==2.34.1) (1.24.3)\n",
-                        "Requirement already satisfied: six>=1.5 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from python-dateutil<3.0dev,>=2.7.2->google-cloud-bigquery[pandas]==2.34.1) (1.16.0)\n",
-                        "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-cloud-bigquery[pandas]==2.34.1) (2.0.4)\n",
-                        "Requirement already satisfied: idna<4,>=2.5 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-cloud-bigquery[pandas]==2.34.1) (3.4)\n",
-                        "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-cloud-bigquery[pandas]==2.34.1) (1.26.16)\n",
-                        "Requirement already satisfied: certifi>=2017.4.17 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-cloud-bigquery[pandas]==2.34.1) (2023.7.22)\n",
-                        "Requirement already satisfied: cachetools<6.0,>=2.0.0 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-auth<3.0.dev0,>=2.14.1->google-api-core[grpc]<3.0.0dev,>=1.29.0->google-cloud-bigquery[pandas]==2.34.1) (5.3.1)\n",
-                        "Requirement already satisfied: pyasn1-modules>=0.2.1 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-auth<3.0.dev0,>=2.14.1->google-api-core[grpc]<3.0.0dev,>=1.29.0->google-cloud-bigquery[pandas]==2.34.1) (0.3.0)\n",
-                        "Requirement already satisfied: rsa<5,>=3.1.4 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from google-auth<3.0.dev0,>=2.14.1->google-api-core[grpc]<3.0.0dev,>=1.29.0->google-cloud-bigquery[pandas]==2.34.1) (4.9)\n",
-                        "Requirement already satisfied: pyasn1<0.6.0,>=0.4.6 in c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth<3.0.dev0,>=2.14.1->google-api-core[grpc]<3.0.0dev,>=1.29.0->google-cloud-bigquery[pandas]==2.34.1) (0.5.0)\n",
-                        "Installing collected packages: google-cloud-bigquery\n",
-                        "Successfully installed google-cloud-bigquery-2.34.1\n"
-                    ]
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "WARNING: Ignoring invalid distribution -atplotlib (c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages)\n",
-                        "WARNING: Ignoring invalid distribution -atplotlib (c:\\programdata\\miniconda3\\envs\\johannes\\lib\\site-packages)\n"
-                    ]
-                }
-            ],
+            "execution_count": 3,
+            "metadata": {},
+            "outputs": [],
             "source": [
-                "!pip install google-cloud-bigquery[pandas]==2.34.1 --user\n",
-                "!pip install google-cloud-bigquery-storage\n",
-                "!pip install db-dtypes\n",
-                "!pip install matplotlib-inline "
+                "# !pip install google-cloud-bigquery[pandas]==2.34.1 --user\n",
+                "# !pip install google-cloud-bigquery-storage\n",
+                "# !pip install db-dtypes\n",
+                "# !pip install matplotlib-inline "
             ]
         },
         {
@@ -319,7 +269,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.11"
+            "version": "3.12.1"
         }
     },
     "nbformat": 4,
