--- a/_Msc Data Science/big data analysis/big data - numpy.ipynb
+++ b/_Msc Data Science/big data analysis/big data - numpy.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### 1.17 Summary - important!\n",
     "\n",
-    "- less than one per cent of all data is ever analysed and used. Underutilisation, disparate sources for data generation, the requirement for harvesting new data and the non realisation of value in the available data are `**the four main reasons why companies are interested in big data**`. \n",
+    "- less than one per cent of all data is ever analysed and used. Underutilisation, disparate sources for data generation, the requirement for harvesting new data and the non realisation of value in the available data are **the four main reasons why companies are interested in big data**. \n",
     "\n",
     "\n",
     "In this topic, we have seen the following four important underlying characteristics of big data: \n",
