--- a/_Msc Data Science/statistics and statistical mining/topic 1/1.12.ipynb
+++ b/_Msc Data Science/statistics and statistical mining/topic 1/1.12.ipynb
@@ -15,6 +15,8 @@
    "source": [
     "## Percentiles and Quartiles\n",
     "\n",
+    "Aka 'order statistics'.\n",
+    "\n",
     "1. **Percentiles**:\n",
     "   - A percentile indicates the value below which a given percentage of observations in a group of observations fall. For example, the 50th percentile is the value below which 50% of the observations may be found.\n",
     "\n",
@@ -22,7 +24,9 @@
     "   - Quartiles divide the dataset into four equal parts:\n",
     "     - **First Quartile ($Q_1$)**: The 25th percentile, below which lies 25% of the data.\n",
     "     - **Second Quartile ($Q_2$) or Median**: The 50th percentile, below which lies 50% of the data.\n",
-    "     - **Third Quartile ($Q_3$)**: The 75th percentile, below which lies 75% of the data."
+    "     - **Third Quartile ($Q_3$)**: The 75th percentile, below which lies 75% of the data.\n",
+    "\n",
+    "A percentile is essentially the same as a quantile, but quantile are indexed by fractions, so the .8 quantile is the 80th percentile."
    ]
   },
   {
