--- a/Projects/data science course/Data science - Reading files, Regex, CSV.ipynb
+++ b/Projects/data science course/Data science - Reading files, Regex, CSV.ipynb
@@ -283,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "note `.DictReader()` method"
+    "note `csv.DictReader()` method"
    ]
   },
   {
