--- a/Projects/data science course/Data science - some best practices.ipynb
+++ b/Projects/data science course/Data science - some best practices.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use assert\n",
     "from typing import List\n",
     "\n",
     "def som(numbers: List[int]) -> int:\n",
     "    # numbers. \n",
     "    return sum(numbers)\n",
     "\n",
-    "# numbers = [1,5,7,3]\n",
+    "numbers = [1,5,7,3]\n",
     "# print(som(numbers))\n",
     "\n",
     "assert som([1,2]) == 3, \"som failed\"\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +150,8 @@
       "ik ben grappig\n",
       "ik ben leuk\n",
       "ik ben mooi\n",
-      "en de rest is saai\n"
+      "en de rest is saai\n",
+      "---\n"
      ]
     }
    ],
@@ -169,6 +171,7 @@
     "                print(f'ik ben {j}')\n",
     "        else: \n",
     "            print(f'en de rest is {d.get(i)}')\n",
+    "    return \n",
     "\n",
     "iets_met_dicts('wie ben ik')"
    ]
@@ -619,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
