--- a/Projects/data science course/data science book - notes/1. Notebook_working_with_data.ipynb
+++ b/Projects/data science course/data science book - notes/1. Notebook_working_with_data.ipynb
@@ -204,6 +204,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "can't set attribute",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mid\u001b[39m: \u001b[38;5;28mint\u001b[39m\n\u001b[0;32m      7\u001b[0m employee \u001b[38;5;241m=\u001b[39m Employee(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAlice\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m123\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m \u001b[43memployee\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBob\u001b[39m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;66;03m# This will raise an AttributeError\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: can't set attribute"
+     ]
+    }
+   ],
+   "source": [
+    "# caveat\n",
+    "from typing import NamedTuple\n",
+    "\n",
+    "class Employee(NamedTuple):\n",
+    "    name: str\n",
+    "    id: int\n",
+    "    \n",
+    "employee = Employee('Alice', 123)\n",
+    "employee.name = 'Bob'  # This will raise an AttributeError because NamedTuple instances are immutable, contrary to dataclasses"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -4005,7 +4034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
