data viz and big data

--- a/MSc Data Science/data programming in python/Data Analysis in Python notes.ipynb
+++ b/MSc Data Science/data programming in python/Data Analysis in Python notes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python for data analysis\n",
+    "# Python for data analysis - O'Reilly\n",
     "\n",
     "Testing / learning of the code in the book.\n",
     "\n",
@@ -1193,11 +1193,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "itertools also has `combinations` and `permutations`, which are similar to SQL `CROSS JOIN`"
    ]
@@ -1208,7 +1203,7 @@
    "source": [
     "### 5. Numpy\n",
     "\n",
-    "Also see [this](</C:/\\\\Users\\johan\\OneDrive\\\\_Msc Data Science\\Machine learning\\Topic 1 - introduction\\1.3 Introduction to NumPy.ipynb>) notebook from the ML module."
+    "Also see [this (path)](</C:/\\Users\\johan\\OneDrive\\/_Msc Data Science\\ML\\Topic 1 - introduction\\1.3 Introduction to NumPy.ipynb>) notebook from the ML module."
    ]
   },
   {
