--- a/MSc Data Science/statistics/topic 1/1.17.ipynb
+++ b/MSc Data Science/statistics/topic 1/1.17.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2951,10 +2962,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Sample variance is**\n",
+    "> **Sample variance is `s squared`**\n",
     "> $$ s^2 = \\frac {\\sum^n _i (x_i - \\bar x)^2} {n-1} $$\n",
     ">\n",
-    "> Note that **population variance** is `sigma squared`:\n",
+    "> **Population variance** is `sigma squared`:\n",
     "> $$ \\sigma^2 = \\frac{\\sum_{i=1}^{n} (x_i - \\mu)^2}{n} $$\n",
     ">\n",
     "> $\\sigma$ without the square is standard deviation."
@@ -3031,17 +3042,6 @@
     "incomes = [45, 52, 38, 90, 45, 36, 70, 100, 85, 60]\n",
     "incomes.sort()\n",
     "incomes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -3174,10 +3174,13 @@
    "source": [
     "## Q4\n",
     "\n",
-    "Remember:\n",
-    "$\n",
+    "Remember the `coefficient for variation`: \n",
+    "$$\n",
     "cv_X = \\frac{\\sigma_X} {\\bar X} \\times 100\n",
-    "$"
+    "$$\n",
+    "\n",
+    "\n",
+    "See the Applied Statistics book page 55."
    ]
   },
   {
