--- a/MSc Data Science/data viz/pyplot.ipynb
+++ b/MSc Data Science/data viz/pyplot.ipynb
@@ -21,7 +21,7 @@
     "2 APIs\n",
     "Object-oriented vs big flat namespace\n",
     "- pyplot is a large flat namespace and is recommended for exploratory first analysis\n",
-    "- it has a current figure object `plt` that makes it easy to work with\n",
+    "- it has a current figure object `plt` that makes it easy to work with - see `gcf()`\n",
     "- mpl is object oriented and is recommended for customised plots\n",
     "- mpl returns axes objects instead of the current figure in `plt`"
    ]
