--- a/MSc Data Science/conda_env.ipynb
+++ b/MSc Data Science/conda_env.ipynb
@@ -236,7 +236,9 @@
    "outputs": [],
    "source": [
     "# the following in terminal (requires y/n)\n",
-    "# !conda create -n notebooks python=3.12.3"
+    "# !conda create -n notebooks python=3.12.3\n",
+    "\n",
+    "# conda create -n laptop python=3.12.3"
    ]
   },
   {
@@ -275,7 +277,8 @@
    ],
    "source": [
     "# adapting the statistics yml to download data science packages\n",
-    "!conda env update -n notebooks -f environment.yml"
+    "!conda env update -n notebooks -f environment.yml\n",
+    "# !conda env update -n laptop -f \"Z:\\github\\notebooks\\MSc Data Science\\environment.yml\""
    ]
   },
   {
